# fecs

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/fecs/containers/: pool.h  sparse_set.h
include/fecs/core/: registry.h  type_index.h  type_traits.h  types.h
include/fecs/management/: entity_builder.h
include/fecs/queues/: group.h  group_base.h  group_part.h  group_slice.h  group_view.h  runner.h  view.h
include/fecs/util/: log.h
src/: group.h  main.cpp  pool.h  pools_registory.h  registory.h  runner.h  sparce_set.h  tests.hpp  type_traits.h  types.h  view.h
src/benchmarks/: b1.hpp  timer.hpp
src/containers/: pool.h  sparce_set.h  sparse_set.h
src/core/: entity_link.h  registory.h  registry.h  type_traits.h
src/queues/: group.h  group_view.h  runner.h  view.h
src/util/: log.h
